	printed output includes these zero items with Inertia and Rank 0,
	whereas NULL components are not displayed. The changes so far only
	concern cca(); rda() and capscale() are only changed after (and
	if) this change appears sensible and correct in cca().

	* drarefy: a new function to return the probabilities that a
	species occurs in a rarefied sample (= sampled without
	replacement) of a given size.

	* diversity, rarefy, rrarefy, specnumber: accept vector input. All
	functions documented in ?diversity now accept vector input.
	Function fisher.alpha and drararefy already accepted vectors.


Version 1.18-23 (closed February 28, 2011)

	* opened with the release of 1.17-7 based on version 1.18-22 on
	February 16, 2011.

	* does not use unnecessary return() plus other stylistic
	twitches. This touches 24 functions, but users should see no
	difference. 

	* procrustes: checks and reports different number of rows instead
	of failing in crossprod() with incompatible arguments.

	* prestonfit, as.preston: default now 'tiesplit = TRUE'.

	* as.preston (prestonfit, prestondistr): uppermost octave could be
	NA with 'tiesplit = TRUE' (a bug).

	* decorana: Cajo ter Braak notified about false expansion of
	computed zero eigenvalues in rescaling which then are used in
	estimating eigenvalues. They are now zeroed. Cajo's example was a
	6x5 petrie matrix:

	petrie <- matrix(0, 6, 5)
	diag(petrie) <- 1
	petrie[row(petrie) - 1 == col(petrie)] <- 1
	decorana(petrie)

	Gavin Simpson had another failing case:

	dummy <- matrix(c(1,3,1,0,0,0,0,0,0,
                   0,0,0,1,3,1,0,0,0,
                   0,0,0,0,0,0,1,3,1), nrow = 3, byrow = TRUE)

	which also failed in orthogonal CA ('ira = 1'). Now the zeroing is
	done after estimating each axis, and the results are similar as in
	Canoco. However, the results of orthogonal CA with 'dummy' are
	wrong in both: there should be two eigenvalues of 1, but only one
	is reported. This is a fundamental problem in the